fix: more gap between lists

--- a/source/sass/options.scss
+++ b/source/sass/options.scss
@@ -1,7 +1,7 @@
 .acf-openstreetmap__options {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 3rem;
     margin-top: 1.5rem;
     position: relative;
 }
